Fix sponsors on Firefox

--- a/public/assets/sass/spongehome.sass
+++ b/public/assets/sass/spongehome.sass
@@ -839,4 +839,3 @@ footer
 
         img
             width: 95%
-            height: 95%
